# renewablepulse

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  README.md  compose.override.yml  compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml
backend/app/: __init__.py  crud.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  history.py
backend/app/core/: config.py
backend/app/queries/: __init__.py  history.py
backend/tests/: conftest.py  test_health.py  test_history.py
frontend/: .gitignore  README.md  index.html  openapi.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/client/: schema.d.ts
frontend/src/components/: CarbonCard.tsx  Card.tsx  GenerationMixCard.tsx  SupplyDemandCard.tsx
frontend/src/hooks/: api.ts  useECharts.ts  useLiveUpdates.ts
frontend/tests/: dashboard.spec.ts  smoke.spec.ts
models/: customers.sql  sources.yml
orchestrator/: README.md  pyproject.toml
orchestrator/src/orchestrator/: __init__.py  _retry.py  assets.py  carbon.py  definitions.py  elexon.py
orchestrator/tests/: test_carbon.py
transform/: README.md  dbt_project.yml  profiles.yml
